WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22968
Context menu rendering error when full page zoomed
https://bugs.webkit.org/show_bug.cgi?id=22968
Summary
Context menu rendering error when full page zoomed
Josh Roesslein
Reported
2008-12-22 12:28:18 PST
The right click context menu is not rendered in the right position when full page zoom is in use. Also the incorrect context menu type (link, image, etc) is incorrect. Cause of the issue is due to lack of transformation to account for the page zoom. By transforming the context menu's point, this issue is resolved. This is an upstream issue from Chromium -->
http://code.google.com/p/chromium/issues/detail?id=3474
I have been working on resolving this issue in chrome, but have determined that this should be an upstreamed patch to webkit. Patch -->
http://codereview.chromium.org/16204/show
Currently I have fixed the issue in our glue layer between webkit and chrome. I feel this should be moved into the ContextMenuController::handleContextMenuEvent method instead.
Attachments
patch to fix issue
(1.62 KB, patch)
2008-12-22 14:40 PST
,
Josh Roesslein
oliver
: review-
Details
Formatted Diff
Diff
Patch #2
(1.55 KB, patch)
2008-12-29 20:21 PST
,
Josh Roesslein
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Josh Roesslein
Comment 1
2008-12-22 14:40:49 PST
Created
attachment 26214
[details]
patch to fix issue
Oliver Hunt
Comment 2
2008-12-29 20:13:53 PST
Comment on
attachment 26214
[details]
patch to fix issue This is basically okay, i'd just like an updated version of this patch with the 'if (frame->pageZoomFactor() != 1.0f)' branch removed.
Josh Roesslein
Comment 3
2008-12-29 20:21:37 PST
Created
attachment 26309
[details]
Patch #2 revised orginal patch to remove the if zoomed test
Oliver Hunt
Comment 4
2008-12-29 21:10:47 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/page/ContextMenuController.cpp Committed
r39506
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug