2008-12-29  Josh Roesslein  <jroesslein@gmail.com>

Reviewed by Oliver Hunt.

Fixes: https://bugs.webkit.org/show_bug.cgi?id=22968

Context menu rendering error when full page zoomed


Canonical link: https://commits.webkit.org/31705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39506 268f45cc-cd09-0410-ab3c-d52691b4dbfc